Spotify-Profile erweitert und Logout-Funktion hinzugefügt:
- `SpotifyProfileDto` um das Feld `product` erweitert.
- Neue JS-Funktionalität `SpotifyProfileUI` implementiert, um Profilinformationen dynamisch anzuzeigen.
- Logout-Logik im Backend (`UserController`) hinzugefügt.
- Frontend-Logout-Button für Session-Handling aktualisiert.
- Neue CSS-Klassen für Avatar-Placeholder und Plan-Badge-Design.